fix(inputfile.module.css): fix overflow in label

--- a/src/InputFile/InputFile.module.scss
+++ b/src/InputFile/InputFile.module.scss
@@ -10,12 +10,13 @@
   margin-bottom: 0.5rem;
   font-size: 0.88875rem;
   font-weight: 500;
+  gap: 1rem;
+  align-items: center;
   justify-content: space-between;
 
-  .container {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
+  .optionalText,
+  .tooltipContainer {
+    padding-left: 0.5rem;
   }
 
   .optionalText {
